code25_all/swift/24134299.txt
class C {

    func a() {}
    func b() {}

    let f = [0: a, 1: b]

    func call(n: Int) {
        f[n]?()
    }
}

let c = C()

c.call(0)

Playground execution failed: error: <REPL>:10:13: error: could not find an overload for 'subscript' that accepts the supplied arguments
    f[n]?()
    ~~~~^~~

func a() {}
func b() {}

let f = [0: a, 1: b]

f[0]?()

